## Main
#
# Test error when TARGET parameter is missing
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
PROJECT(CMDEF_ADD_EXECUTABLE_MISSING_TARGET_ERROR_TEST)

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../../CMDEFConfig.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../shared_sources/shared_sources.cmake")

CMDEF_ADD_EXECUTABLE(
    SOURCES "${MAIN_SOURCE_FILE}"
    VERSION 1.0.0
)
